Issue #2981126 by rahul01, Neetika K: Advanced Search: The text field under keywords are not aligned properly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -745,6 +745,18 @@ border-top-left-radius: 4px; border-top-right-radius: 4px; }
 -moz-border-radius-bottomright: 4px; -webkit-border-bottom-left-radius: 4px; -webkit-border-bottom-right-radius: 4px;
 border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; }
 
+/* search form */
+
+.search-block-form .form-item {
+  margin-bottom: 0;
+}
+.search-form .search-advanced label {
+  min-width: 200px;
+}
+.search-form .search-advance input {
+   margin-left: 10px;
+}
+
 /* Comment form */
 
 .comment-form label { font-size: 0.929em; }
